# message-hook

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  config.toml.example  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: docker.yml
src/: config.rs  main.rs  models.rs
src/handlers/: alertmanager.rs  argocd.rs  cloudflare.rs  mod.rs
src/services/: matrix.rs  mod.rs  telegram.rs
